(add) lyrics-language-learner - history in sidebar - fix header margin closing issue - have video container on big screens   - else only show lyrics on smaller screens

--- a/client/ListMapper/list-mapper/src/sb/lyrics-language-learner/lyrics-language-learner.less
+++ b/client/ListMapper/list-mapper/src/sb/lyrics-language-learner/lyrics-language-learner.less
@@ -2,40 +2,45 @@
 @import (reference) '../../resources/common/styles/common.less';
 
 @sidebarMargin: 16px;
+@sidebarPadding: 16px;
 
-.lyrics-container {
-  & * {
-    border: 1px dashed #333;
-  }
+.page-container {
+  display: flex;
+  & * { border: 1px dashed #333; }
 
-  .lyrics-line {
-    display: flex;
+  .lyrics-container {
+    width: 50%;
 
-    .lyrics-line-number {
+    .lyrics-line {
+      display: flex;
 
-      margin: 0 20px;
-    }
+      .lyrics-line-number { margin: 0 20px; }
 
-    .lyrics-text {
-
-      .lyrics-original,
-      .lyrics-translation {
-        .lyrics-word {
-          &:hover {
-            color: orange;
-            cursor: pointer;
+      .lyrics-text {
+        .lyrics-original,
+        .lyrics-translation {
+          .lyrics-word {
+            &:hover {
+              color: orange;
+              cursor: pointer;
+            }
           }
         }
-      }
 
-      .lyrics-original {
+        .lyrics-original {
 
-      }
+        }
 
-      .lyrics-translation {
+        .lyrics-translation {
 
+        }
       }
     }
+  }
+
+  .video-container {
+    width: 50%;
+
   }
 }
 
@@ -44,7 +49,9 @@
 .sidebar.sidebar-bottom {
   .sidebar-content {
     .sidebar-header {
-      margin: @sidebarMargin;
+      /* Fix: clicking in margin closes the header */
+      padding: @sidebarPadding;
+      margin-bottom: 0;
 
       .lyrics-word {
         &:hover {
@@ -63,9 +70,8 @@
         width: 100%;
         margin-bottom: @sidebarMargin;
 
-        > * {
-          border: 1px solid;
-        }
+        > * { border: 1px solid; }
+
         .original {
           width: 48%;
           min-height: 140px;
@@ -75,6 +81,22 @@
           width: 48%;
           min-height: 140px;
         }
+      }
+
+      .sidebar-history-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .sidebar-history {
+          display: flex;
+          width: 100%;
+          justify-content: space-between;
+
+          .history-original { width: 48%; }
+          .history-translation { width: 48%; }
+        }
+
       }
 
       label.label-top {
@@ -107,3 +129,10 @@
   }
 }
 
+@media only screen and (max-width: 640px) {
+  /** Half screen size (13' macbook should show full lyrics)*/
+  .page-container {
+    .lyrics-container { width: 100%; }
+    .video-container { display: none; }
+  }
+}
